--- a/views/login-register.ejs
+++ b/views/login-register.ejs
@@ -5,62 +5,73 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Login Or Register</title>
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
+    <title>Login / Register</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 </head>
 
 <body>
-    <div class="container p-5">
-        <h1 class="text-center mb-5 text-uppercase text-muted">ระบบเเจ้งซ่อมของคณะ</h1>
-        <div class="row">
-            <div class="col-sm-5 bg-light border rounded py-3">
-                <h2 class="text-center">Login</h2>
+    <div class="container">
+        <h1 class="text-center mb-4 text-uppercase text-muted">ระบบเเจ้งซ่อมของคณะ</h1>
+        <% if (locals.login_errors) { login_errors.forEach(function(error_msg){ %>
+        <div class="alert alert-danger mt-4" role="alert">
+            <%= error_msg %>
+        </div>
+        <% }); } %>
+        <% if (locals.register_error) { register_error.forEach(function(error_msg){ %>
+        <div class="alert alert-danger" role="alert">
+            <%= error_msg %>
+        </div>
+        <% }); } %>
+        <div class="card mb-4">
+            <div class="card-header">
+                Login
+            </div>
+            <div class="card-body">
                 <form action="" method="POST">
-                    <div class="form-group">
-                        <label for="_email">Email</label>
-                        <input type="text" name="user_email" id="_email" class="form-control" placeholder="Email"
-                            rnodeequired>
-                    </div>
-                    <div class="form-group">
-                        <label for="_pass">Password</label>
-                        <input type="password" name="user_pass" id="_pass" class="form-control" placeholder="Password"
-                            required>
-                    </div>
-                    <% if (locals.login_errors) { login_errors.forEach(function(error_msg){ %>
-                        <div class="alert alert-danger" role="alert">
-                            <%= error_msg %>
+                    <div class="row">
+                        <div class="col">
+                            <div class="mb-3">
+                                <label for="exampleInputEmail1" class="form-label">Email address</label>
+                                <input type="email" class="form-control" id="user_email" name="user_email" placeholder="Email">
+                            </div>
                         </div>
-                        <% }); } %>
-                            <button type="submit" class="btn btn-primary">Login</button>
+                        <div class="col">
+                            <div class="mb-3">
+                                <label for="exampleInputPassword1" class="form-label">Password</label>
+                                <input type="password" name="user_pass" id="_pass" class="form-control" placeholder="Password" required>
+                            </div>
+                        </div>
+                    </div>
+                    <button type="submit" class="btn btn-primary">Login</button>
                 </form>
             </div>
-            <div class="col-sm-6 bg-light rounded border py-3 offset-sm-1">
-                <h2 class="text-center">Register</h2>
-
+        </div>
+        <div class="card mb-4">
+            <div class="card-header">
+                Register
+            </div>
+            <div class="card-body">
                 <form action="/register" method="POST" novalidate>
-                    <div class="form-group">
-                        <label for="_rname">Name</label>
-                        <input type="text" name="user_name" id="_rname" class="form-control" placeholder="Name"
-                            value="<%= (locals.old_data) ? old_data.user_name : ''; %>" required>
+                    <div class="mb-3">
+                        <label for="exampleInputEmail1" class="form-label">Name</label>
+                        <input type="text" name="user_name" id="_rname" class="form-control" placeholder="Name" value="<%= (locals.old_data) ? old_data.user_name : ''; %>" required>
                     </div>
-                    <div class="form-group">
-                        <label for="_remail">Email</label>
-                        <input type="email" name="user_email" id="_remail" class="form-control" placeholder="Email"
-                            value="<%= (locals.old_data) ? old_data.user_email : ''; %>" required>
-                    </div>
-                    <div class="form-group">
-                        <label for="_rpass">Password</label>
-                        <input type="password" name="user_pass" id="_rpass" class="form-control" placeholder="Password"
-                            required>
-                    </div>
-                    <% if (locals.register_error) { register_error.forEach(function(error_msg){ %>
-                        <div class="alert alert-danger" role="alert">
-                            <%= error_msg %>
+                    <div class="row">
+                        <div class="col">
+                            <div class="mb-3">
+                                <label for="exampleInputEmail1" class="form-label">Email</label>
+                                <input type="email" name="user_email" id="_remail" class="form-control" placeholder="Email" value="<%= (locals.old_data) ? old_data.user_email : ''; %>" required>
+                            </div>
                         </div>
-                        <% }); } %>
-                            <button type="submit" class="btn btn-success">Sign Up</button>
+                        <div class="col">
+                            <div class="mb-3">
+                                <label for="exampleInputEmail1" class="form-label">Password</label>
+                                <input type="password" name="user_pass" id="_rpass" class="form-control" placeholder="Password" required>
+                            </div>
+                        </div>
+                    </div>
+                    <button type="submit" class="btn btn-primary">Register</button>
                 </form>
-
             </div>
         </div>
     </div>
