--- a/views/repair/index.ejs
+++ b/views/repair/index.ejs
@@ -6,108 +6,230 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>หน้าหลัก</title>
-    <!-- BOOTSTRAP CDN -->
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 
+    <style>
+        .js-pscroll {
+            position: relative;
+            overflow: hidden;
+        }
+
+        .table100 .ps__rail-y {
+            width: 9px;
+            background-color: transparent;
+            opacity: 1 !important;
+            right: 5px;
+        }
+
+        .table100 .ps__rail-y::before {
+            content: "";
+            display: block;
+            position: absolute;
+            background-color: #ebebeb;
+            border-radius: 5px;
+            width: 100%;
+            height: calc(100% - 30px);
+            left: 0;
+            top: 15px;
+        }
+
+        .table100 .ps__rail-y .ps__thumb-y {
+            width: 100%;
+            right: 0;
+            background-color: transparent;
+            opacity: 1 !important;
+        }
+
+        .table100 .ps__rail-y .ps__thumb-y::before {
+            content: "";
+            display: block;
+            position: absolute;
+            background-color: #ccc;
+            border-radius: 5px;
+            width: 100%;
+            height: calc(100% - 30px);
+            left: 0;
+            top: 15px;
+        }
+
+        .container-table100 {
+            width: 100%;
+            min-height: 100vh;
+            display: -webkit-box;
+            display: -webkit-flex;
+            display: -moz-box;
+            display: -ms-flexbox;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            flex-wrap: wrap;
+        }
+
+        .table100 {
+            background-color: #fff;
+        }
+
+        table {
+            width: 100%;
+        }
+
+        th,
+        td {
+            font-weight: unset;
+        }
+
+        .table100-head th {
+            padding-top: 18px;
+            padding-bottom: 18px;
+        }
+
+        .table100-body td {
+            padding-top: 16px;
+            padding-bottom: 16px;
+        }
+
+        .table100 {
+            position: relative;
+            padding-top: 60px;
+        }
+
+        .table100-head {
+            position: absolute;
+            width: 100%;
+            top: 0;
+            left: 0;
+        }
+
+        .table100-body {
+            height: 100vh;
+            max-height: 485px;
+            overflow: auto;
+        }
+
+        .table100.ver2 .table100-head {
+            box-shadow: 0 5px 20px 0 rgba(0, 0, 0, 0.1);
+            -moz-box-shadow: 0 5px 20px 0 rgba(0, 0, 0, 0.1);
+            -webkit-box-shadow: 0 5px 20px 0 rgba(0, 0, 0, 0.1);
+            -o-box-shadow: 0 5px 20px 0 rgba(0, 0, 0, 0.1);
+            -ms-box-shadow: 0 5px 20px 0 rgba(0, 0, 0, 0.1);
+        }
+
+        .table100.ver2 th {
+            font-size: 14px;
+            color: #000000;
+            line-height: 1.4;
+            background-color: transparent;
+        }
+
+        .table100.ver2 td {
+            font-size: 14px;
+            color: gray;
+            line-height: 1.4;
+        }
+
+        .table100.ver2 .table100-body tr,
+        .table100-head tr {
+            border-bottom: 1px solid #f2f2f2;
+            text-align: center;
+        }
+
+        .table100.ver2 {
+            border-radius: 0.3rem;
+            overflow: hidden;
+            border: 1px solid #dee2e6;
+            box-shadow: 0 1rem 3rem rgba(0, 0, 0, 0.175)
+        }
+
+        .table100.ver2 .ps__rail-y {
+            right: 5px;
+        }
+
+        .table100.ver2 .ps__rail-y::before {
+            background-color: #ebebeb;
+        }
+
+        .table100.ver2 .ps__rail-y .ps__thumb-y::before {
+            background-color: #ccc;
+        }
+    </style>
 </head>
 
 <body>
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-        <a class="navbar-brand" href="#">ระบบเเจ้งซ่อมของคณะ</a>
-        <div class="collapse navbar-collapse" id="navbarText">
-            <ul class="navbar-nav mr-auto">
-                <li class="nav-item active">
-                    <a class="nav-link" href="#">หน้าหลัก <span class="sr-only">(current)</span></a>
-                </li>
-                <li class="nav-item">
-                    <!-- <a href="/repair/add" class="nav-link">เพิ่มพนักงานซ่อม</a> -->
-                </li>
-            </ul>
-            <span class="navbar-text">
-                <a href="/logout" class="btn btn-danger text-light"><i class='bx bx-log-out'></i> Logout</a>
-            </span>
-        </div>
-    </nav>
     <section class="container" style="margin-top: 50px;">
         <div class="d-flex justify-content-between align-items-center">
-            <h1>Hello Admin : <%= data[0].name %>
-            </h1>
-
+            <h2>Hello Admin : <%= name %></h2>
         </div>
-        <div class="card">
-            <div class="card-header">
-                <ul class="nav nav-pills w-100">
-                    <li class="nav-link">รายการแจ้งซ่อมของฉัน</li>
-                    <li class="nav-link ml-auto">
-                        <!-- <a href="/repair/add" class="nav-link active"><i class='bx bx-add-to-queue' ></i>  เพิ่มรายการเเจ้งซ่อม</a> -->
-                    </li>
-                </ul>
-            </div>
-            <div class="card-body">
-                <% if(data.length) { %>
-                <table class="table">
-                    <thead>
-                        <tr>
-                            <th scope="col">ลำดับ</th>
-                            <th scope="col">รหัสแจ้งซ่อม</th>
-                            <th scope="col">ชื่อ-นามสกุล</th>
-                            <th scope="col">สถานะ</th>
-                            <th scope="col">สิ่งของแจ้งซ่อม</th>
-                            <th width="200px">รายละเอียด/แก้ใข/ลบ</th>
-                        </tr>
-                    </thead>
-                    <tbody>
-                        <% for(let i=0; i < data.length; i++) { %>
-                        <tr>
-                            <th scope="row">
-                                <%= i+1 %>
-                            </th>
-                            <td>
-                                <%= data[i].repair_id %>
-                            </td>
-                            <td>
-                                <%= data[i].name %>
-
-                            </td>
-                            <td>
-                                <% if (data[i].status == 1) { %>
-                                <span class="badge badge-primary">เเจ้งซ่อม</span>
-                                <%} else if (data[i].status == 2) { %>
-                                <span class="badge badge-warning">กำลังซ่อม</span>
-                                <%} else if (data[i].status == 3) { %>
-                                <span class="badge badge-success">ซ่อมเสร็จสิ้น</span>
-                                <%} else if (data[i].status == 5) { %>
-                                <span class="badge badge-danger">ยกเลิกการเเจ้งซ่อม</span>
-                                <% } %>
-                            </td>
-                            <td>
-                                <% if (data[i].equipment_id != 5) { %>
-                                <%= data[i].equipment_name %>
-                                <%} else { %>
-                                <%= data[i].other %>
-                                <% } %>
-                            </td>
-                            <td>
-                                <!-- <a href="../repair/detalis/<%= data[i].id %>" class="btn btn-primary"><i class='bx bx-detail' ></i></a> -->
-                                <a href="../repair/edit/<%= data[i].id %>" class="btn btn-success"><i class='bx bx-edit'></i></a>
-                                <a href="../repair/delete/<%= data[i].id %>" onclick="return alert('Are you sure?')" class="btn btn-danger"><i class='bx bx-trash'></i></a>
-                            </td>
-                        </tr>
-                        <% } %>
-                    </tbody>
-                </table>
-                <% } %>
-
-                <!-- if result is empty -->
-                <% if(!data.length) { %>
-                <p class="text-center">ยังไม่มีรายการเเจ้งซ่อม!</p>
-                <% } %>
+        <h2>รายการแจ้งซ่อมทั้งหมด</h2>
+        <a href="/repair/add" class="btn btn-primary"><i class='bx bx-add-to-queue'></i> เพิ่มรายการเเจ้งซ่อม</a>
+        <a href="/logout" class="btn btn-danger text-light"><i class='bx bx-log-out'></i> Logout</a>
+        <div>
+            <div class="table100 ver2 mb-4 mt-4">
+                <div class="table100-head">
+                    <table>
+                        <thead>
+                            <tr>
+                                <th style="width: 5%">ลำดับ</th>
+                                <th style="width: 10%">รหัสแจ้งซ่อม</th>
+                                <th style="width: 10%">ชื่อ-นามสกุล</th>
+                                <th style="width: 10%">สถานะ</th>
+                                <th style="width: 10%">สิ่งของแจ้งซ่อม</th>
+                                <th style="width: 20%">แก้ใข/ลบ</th>
+                            </tr>
+                        </thead>
+                    </table>
+                </div>
+                <div class="table100-body js-pscroll">
+                    <table>
+                        <tbody>
+                            <% if(data.length) { %>
+                            <% for(let i=0; i < data.length; i++) { %>
+                            <tr>
+                                <td style="width: 5%">
+                                    <%= i+1 %>
+                                </td>
+                                <td style="width: 10%">
+                                    <%= data[i].repair_id %>
+                                </td>
+                                <td style="width: 10%">
+                                    <%= data[i].name %>
+                                </td>
+                                <td style="width: 10%">
+                                    <% if (data[i].status == 1) { %>
+                                    <span class="badge bg-info text-dark">เเจ้งซ่อม</span>
+                                    <%} else if (data[i].status == 2) { %>
+                                    <span class="badge bg-warning text-dark">กำลังซ่อม</span>
+                                    <%} else if (data[i].status == 3) { %>
+                                    <span class="badge bg-success">ซ่อมเสร็จสิ้น</span>
+                                    <%} else if (data[i].status == 5) { %>
+                                    <span class="badge bg-danger">ยกเลิกการเเจ้งซ่อม</span>
+                                    <% } %>
+                                </td>
+                                <td style="width: 10%">
+                                    <% if (data[i].equipment_id != 5) { %>
+                                    <%= data[i].equipment_name %>
+                                    <%} else { %>
+                                    <%= data[i].other %>
+                                    <% } %>
+                                </td>
+                                <td style="width: 20%">
+                                    <a href="../repair/edit/<%= data[i].repair_id %>" class="btn btn-success"><i class='bx bx-edit'></i></a>
+                                    <form method="POST" action="repair/delete/<%= data[i].repair_id %>?_method=DELETE" class="d-inline">
+                                        <button type="submit" onclick="return confirm('Are you sure you want to delete ?')" class="btn btn-danger"><i class='bx bx-trash'></i></button>
+                                    </form>
+                                </td>
+                            </tr>
+                            <% } %>
+                            <% } %>
+                            <% if(!data.length) { %>
+                            <p class="text-center">ยังไม่มีรายการเเจ้งซ่อม!</p>
+                            <% } %>
+                        </tbody>
+                    </table>
+                </div>
             </div>
         </div>
     </section>
-
-
 </body>
 
 </html>
